syntax = "proto3";

package proto;

option java_package = "protocol";
option java_outer_classname = "EmployeeBookProtos";

message Employee{
    int32 employeeId = 1;
    string name = 2;
    string phoneNumber = 3;
    int32 salary = 4;
    string department = 5;
    string createDate = 6;
    string updateDate = 7;
}

message Employees{
   repeated Employee employees = 1;
}